# jiagu

./: .gitignore  build.gradle.kts  build.sh  settings.gradle.kts
.github/workflows/: main.yml  main2.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/dexprotector/: MainActivity.kt
app/src/main/java/com/dexprotector/engine/: ApkParser.kt  ApkRepackager.kt  ApkSigner.kt  DexEncryptor.kt  DexProtectorEngine.kt  ManifestPatcher.kt  SoPatcher.kt
app/src/main/java/com/dexprotector/model/: Models.kt
app/src/main/java/com/dexprotector/ui/screen/: MainScreen.kt  MainViewModel.kt
app/src/main/java/com/dexprotector/ui/theme/: Theme.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
publish_site/: index.html
stub/: build.gradle.kts  consumer-rules.pro
stub/src/main/: AndroidManifest.xml
stub/src/main/cpp/: CMakeLists.txt  dex_loader.cpp
stub/src/main/java/com/dexprotector/stub/: StubApplication.java
